# Video-Stablization-414

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  SIFT.cpp  SIFT.h  cmake_install.cmake  descriptor.cpp  descriptor.h  localization.cpp  localization.h  main.cpp  orientation.cpp  orientation.h  output.txt  scale.cpp  scale.h
results/: asb_1_output.avi  asb_2_output.avi  deer_output_poor.avi  shaky1_output.avi  shaky_1_bad.avi  shaky_1_output_attempt.avi
